syntax = "proto3";

import "protodefine/mytype/types.proto";

package bs.router;

enum CMDID_Router{
	IDUnknow = 0;			//0保留
	
	IDTransferData = 1;		//router的转发数据包
	IDRegisterAppReq = 2;	//其他APP向router发送的注册请求
	IDRegisterAppRsp = 3;	//router的注册回复
	IDLast=100;
};



message RouterTransferData{
	enum DataDirection{
		App2App = 0;
		App2Client = 1;
		Client2App = 2;
	}
	types.BaseInfo base = 1; 
	uint32 dest_apptype = 2;	//目标apptype
	uint32 dest_appid = 3;		//目标appid
	uint32 src_apptype = 4;		//来源apptype
	uint32 src_appid = 5;		//来源appid
	uint32 data_cmd_kind = 6;	
	uint32 data_cmd_subid = 7;
	bytes  data = 8;
	DataDirection data_direction = 9;	//指示报文方向，从哪发往哪的
	//如果是App2Client或者Client2App，下面4项有值，如果是App2App则可以不填
	string client_remote_address = 10;		//客户端的ip及其端口，格式为192.168.1.1:10114
	uint32 att_gateid = 11;		//客户端所在的gateid
	uint64 att_userid = 12;		//客户端对应的userid
	uint64 att_gateconnid = 13;	//关联的gate上对应的客户端session id
};


message	RegisterAppReq {
	types.BaseInfo base = 1; 
	string auth_key =2;		//验证串，如果需要注册验证的话
	string att_data =3;		//附加信息
	string my_address=4;	//自己的IP地址，这个不用填，由网络层获取并填充
	uint32 app_type=5;		
	uint32 app_id =6;
};

message RegisterAppRsp {
	types.BaseInfo base = 1; 
	uint32 reg_result = 2;	//0失败 1成功
};
